--- a/src/hocs/MainLayout/Layout.module.scss
+++ b/src/hocs/MainLayout/Layout.module.scss
@@ -1,7 +1,7 @@
 .appLayout {
 	width: 100vw;
 	height: 100vh;
-	background: rgb(116, 119, 141);
+	overflow: scroll;
 	background: linear-gradient(
 		17deg,
 		rgba(116, 119, 141, 0.8869922969187675) 0%,
