--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -4,10 +4,15 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: rgba(7, 7, 7, 0.374);
+	background-color: rgba(7, 7, 7, 0.55);
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	z-index: 10;
+
+	&:hover {
+		cursor: pointer;
+	}
 }
 
 .Hide {
