adds delete functionality to clients page; confirm action modal added

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -14,6 +14,10 @@
 	background-color: #83cd77 !important;
 }
 
+.Red {
+	background-color: rgba(255, 0, 0, 0.69) !important;
+}
+
 .Grey {
 	background-color: #bcb9ac;
 }
