--- a/src/components/UI/Modal/ModalCard/ModalCard.module.scss
+++ b/src/components/UI/Modal/ModalCard/ModalCard.module.scss
@@ -1,8 +1,8 @@
-.FormContainer {
+.ModalCard {
 	width: 400px;
 	max-height: 600px;
 	overflow-y: scroll;
-	background-color: rgba(226, 226, 226, 0.97);
+	background-color: white;
 	border-radius: 20px;
 	position: absolute;
 	z-index: 11;
