--- a/src/hocs/FullListLayout/FullListLayout.module.scss
+++ b/src/hocs/FullListLayout/FullListLayout.module.scss
@@ -1,6 +1,6 @@
-.FlightPageWrapper {
+.ListWrapper {
 	display: flex;
-	.FlightListCol {
+	.ListCol {
 		background-color: white;
 		padding: 2rem;
 		width: 800px;
