--- a/src/components/Lists/FlightList/FlightCard/FlightCard.module.scss
+++ b/src/components/Lists/FlightList/FlightCard/FlightCard.module.scss
@@ -2,7 +2,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border: solid 1px rgba(24, 22, 21, 0.28);
+	// border: solid 1px rgba(24, 22, 21, 0.28);
+	box-shadow: 1px 1px 4px rgba(170, 152, 152, 0.55);
 	background-color: rgba(160, 162, 177, 0.11);
 	border-radius: 20px;
 	width: 650px;
