adds update abilities to flights

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .BtnComponent {
 	color: white;
 	border: none;
-	width: 120px;
+	min-width: 120px;
 	margin: 5px 5px 5px 10px;
 	height: 25px;
 	border-radius: 5px;
